src/objects/AACR_Error_Log__c.object
<CustomObject>
    <description>Holds aacr error log data</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <description>Email address or phone number</description>
        <label>Preferred Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>If contact record is not present, the name of the user requesting help</description>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact record who created the error</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AACR Error Logs</relationshipLabel>
        <relationshipName>AACR_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Id__c</fullName>
        <description>Id of incident type</description>
        <label>Incident Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <description>Description of issue requested by user</description>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>Type of issue requested by user</description>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trouble resetting myAACR password</fullName>
                </value>
                <value>
                    <fullName>Locked out of myAACR</fullName>
                </value>
                <value>
                    <fullName>myAACR Site Broken</fullName>
                </value>
                <value>
                    <fullName>Trouble completing membership application</fullName>
                </value>
                <value>
                    <fullName>Trouble Renewing Membership</fullName>
                </value>
                <value>
                    <fullName>Issue with submitting abstract or application</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Stack Trace string produced by apex exception</description>
        <label>Stack Trace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>url where error occured</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current salesforce user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AACR_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AACR Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Email__c</columns>
        <columns>Incident_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AACR Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AACR Error Logs</pluralLabel>
    <recordTypes>
        <fullName>Error_Exception</fullName>
        <active>true</active>
        <description>Automatic error exception</description>
        <label>Error Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Request</fullName>
        <active>true</active>
        <description>User submitted request</description>
        <label>User Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>